--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,8 +6,11 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.modules = ""
 resources.frontController.params.displayExceptions = 0
 
+
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 [staging : production]
 
 [testing : production]
@@ -18,3 +21,14 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+resources.layout.layoutPath = APPLICATION_PATH "/layouts"
+resources.layout.layout = master
+
+;resources.db.adapter="Pdo_Mysql"
+;resources.db.params.host="HostName"
+;resources.db.params.username="UserName"
+;resources.db.params.password="Password"
+;resources.db.params.dbname="DbName"
+
+
