--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,21 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.modules = ""
 resources.frontController.params.displayExceptions = 0
 
+resources.router.routes.home.route = /home
+resources.router.routes.home.defaults.module = default
+resources.router.routes.home.defaults.controller = index
+resources.router.routes.homedefaults.action = index
+
+resources.router.routes.static-content.route = /content/:page
+resources.router.routes.static-content.defaults.module = default
+resources.router.routes.static-content.controller = static-content
+resources.router.routes.static-content.action = display
+
+resources.router.routes.contact.route = /contact
+resources.router.routes.contact.defaults.module = default
+resources.router.routes.contact.defaults.controller = contact
+resources.router.routes.contact.defaults.action = index
+autoloaderNamespaces[] = "Square_"
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 [staging : production]
